create github pages

--- a/chimeneasdelaalpujarra.html
+++ b/chimeneasdelaalpujarra.html
@@ -31,7 +31,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Chimeneas <br>de <strong>La Alpujarra</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Cuando lo práctico se hace bello.
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Cuando lo práctico <strong>también es bello</strong>.
                 </h3>
                 
             </div>
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="cid-s2qx2SrUtV" id="image3-5">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-s2qx2SrUtV" id="image3-5">
 
     
 
