--- a/laalpujarraencolores.html
+++ b/laalpujarraencolores.html
@@ -31,15 +31,14 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-2"><strong>La Alpujarra</strong><br>en código de colores</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Cuando lo práctico <strong>también es bello</strong>.
-                </h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">'Si los códigos de barras se <br><strong>hubieran inventado en La Alpujarra</strong>...'</h3>
                 
             </div>
         </div>
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="cid-s2rJKa4jLn" id="image3-l">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-s2rJKa4jLn" id="image3-l">
 
     
 
