--- a/chimeneasdelaalpujarra.html
+++ b/chimeneasdelaalpujarra.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -40,7 +41,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="cid-s2qyKqrZeg" id="image3-6">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="cid-s2qyKqrZeg" id="image3-6">
 
     
 
@@ -164,8 +165,10 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
